# dual-tree

./: .gitignore  .travis.yml  CHANGES  LICENSE  README.markdown  dual-tree.cabal  dubl-tree.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/Data/Tree/: DUAL.hs  DUBL.hs
src/Data/Tree/DUAL/: Internal.hs
test/: Test.hs
