name:                dual-tree
version:             0.1.0.0
synopsis:            Rose trees with cached and accumulating monoidal annotations
description:         Rose (n-ary) trees with both upwards- (/i.e./
                     cached) and downwards-traveling (/i.e./
                     accumulating) monoidal annotations.  This is used
                     as the core data structure underlying the
                     @diagrams@ framework
                     (<http://projects.haskell.org/diagrams>), but
                     potentially has other applications as well.
		     .
                     Abstractly, a DUALTree is a rose (n-ary) tree
                     with data (of type @l@) at leaves, data (of type
                     @a@) at internal nodes, and two types of monoidal
                     annotations, one (of type @u@) travelling \"up\"
                     the tree and one (of type @d@) traveling
                     \"down\".
		     .
		     See "Data.Tree.DUAL" for full documentation.
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          diagrams-discuss@googlegroups.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/diagrams/dual-tree.git

library
  default-language:  Haskell2010
  exposed-modules:   Data.Tree.DUAL
  build-depends:     base >= 4.3 && < 4.7, 
                     semigroups >= 0.8 && < 0.9,
                     newtype >= 0.2 && < 0.3,
                     monoid-extras >= 0.2 && < 0.3
  hs-source-dirs:    src
  other-extensions:  GeneralizedNewtypeDeriving,
                     MultiParamTypeClasses,
                     FlexibleInstances,
                     DeriveFunctor,
                     TypeOperators,
                     FlexibleContexts,
                     DeriveDataTypeable
