name:                dubl-tree
version:             0.1.0.0
synopsis:            Rose trees with cached and accumulating monoidal annotations
description:         XXX write me
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          diagrams-discuss@googlegroups.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  exposed-modules:   Data.Tree.DUBL
  build-depends:     base >= 4.3, 
                     semigroups >= 0.8 && < 0.9,
                     monoid-extras >= 0.1 && < 0.2
  hs-source-dirs:    src